Mobile screen bugs squashed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,7 +120,7 @@ img {
   margin: 0.5rem 0;
 }
 .my-1 {
-  margin: 1rem 0;
+  
 }
 .my-2 {
   margin: 2rem 0;
@@ -172,6 +172,8 @@ img {
 }
 
  .question{
+   width: 80%;
+   overflow: hidden;
   margin-left: 5% !important; 
   font-size: 1.3em;
 }
@@ -265,14 +267,15 @@ img {
 
 /* Forms */
 .form{
+  width: 100vw;
   margin: 2% 30% !important;
   margin: auto;
   align-items: center;
   width: 60vw;
 }
 .form .form-group {
+  overflow: hidden;
   margin:  0;
-  width: 100vw;
 }
 
 .form .form-text {
@@ -492,6 +495,10 @@ h3{
 .post-form .post-form-header {
   background: var(--primary-color);
   padding: 0.5rem;
+}
+
+.post-form{
+  overflow: hidden;
 }
 
 .quiz-head{
